# lightning-base

./: .env.copy  .gitignore  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/baselines/: template.yaml  template_baseline.yaml
configs/grids/: template_grid.yaml
data/: classes.txt
docs/: ARCHITECTURE.md  references.bib
docs/agents/: CLAUDE.md  CONTEXT.md  GEMINI.md
misc/: protected-main.json
misc/context/: METACONTEXT.md
misc/personal/: NOTES.md
notebooks/dev/: Data_Augmentation.ipynb
notebooks/reproducibility/: 01_Exploratory_Data_Analysis.ipynb  02_Model_Selection_Training.ipynb  03_Model_Analysis_Tuning.ipynb  04_Model_Evaluation.ipynb  04_Model_Evaluation.py
scripts/: train.py  train_fast_dev_run.py  train_full.py  train_grid_search.py
src/lightning_base/utils/: constants.py  logger.py  seed.py
src/lightning_uv_wandb_template/data/: __init__.py  datamodule.py  download.py  transforms.py  utils.py
src/lightning_uv_wandb_template/models/: __init__.py  classifier.py
src/lightning_uv_wandb_template/utils/: constants.py  metrics.py  seed.py  visualization.py
tests/data/: test_datamodule.py
tests/integration/: test_training.py
tests/misc/: __init__.py  test_imports.py
tests/models/: test_models.py
