[project]
name = "lightning-base"
version = "0.1.0"
description = "A template repository for PyTorch Lightning-centric projects."
readme = "README.md"
requires-python = "==3.11.14"
dependencies = [
    "ipykernel>=7.2.0",
    "lightning[pytorch-extra]>=2.6.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pip>=26.0.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "wandb>=0.25.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lightning_base"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "T20"]
ignore = ["N812"]
fixable = ["ALL"]
unfixable = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not slow'"
markers = [
    "slow: marks tests as slow (deselected by default; run with -m slow)",
]
